@@ -11,15 +11,13 @@ import org.springframework.boot.ApplicationRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Configuration
 @RequiredArgsConstructor
@@ -27,6 +25,8 @@ public class BaseInitData {
     private final CartService cartService;
     private final MenuService menuService;
     private final OrderService orderService;
+    private final ResourceLoader resourceLoader;  // ResourceLoader 추가
+
     @Value("${upload.path}")
     String savePath;
 
@@ -45,15 +45,18 @@ public class BaseInitData {
     public void makeSampleMenus() throws IOException {
         if (menuService.count() > 0) return;
 
-        for (int i = 1; i <= 8; i++) {
-            String fileName = String.format("menu%d.jpg", i );
-            Path filePath = Paths.get(savePath + fileName);
+        for (int i = 1; i <= 35; i++) {
+            int num = ((i-1) % 8) + 1;
+            String fileName = String.format("menu%d.jpg", num);
+
+            // Resource를 사용하여 classpath에서 이미지 파일 읽기
+            Resource resource = resourceLoader.getResource("classpath:static/images/" + fileName);
 
             MultipartFile multipartFile = new MockMultipartFile(
                     fileName,
                     fileName,
                     "image/jpeg",
-                    Files.readAllBytes(filePath)
+                    resource.getInputStream().readAllBytes()
             ) {
             };
 
@@ -65,28 +68,5 @@ public class BaseInitData {
                     .build();
             menuService.create(menuRequestDto, multipartFile);
         }
-
-//        String[] menuTypes = {"커피", "주스", "스무디", "티", "에이드"};
-//        String[] descriptionsTemplate = {
-//                "깊고 진한 맛의 ",
-//                "상큼하고 달콤한 ",
-//                "시원하고 청량한 ",
-//                "부드럽고 향긋한 ",
-//                "달콤쌉싸름한 "
-//        };
-//
-//        for (int i = 1; i <= 200; i++) {
-//            // 메뉴 종류를 랜덤하게 선택
-//            String menuType = menuTypes[i % 5];
-//            String description = descriptionsTemplate[i % 5];
-//
-//            menuService.create(
-//                    menuType + " " + i + "호", // 예: "커피 1호", "주스 2호" 등
-//                    description + menuType + "입니다.", // 예: "깊고 진한 맛의 커피입니다."
-//                    ((i % 3) + 3) * 1000, // 3000~5000원 범위의 가격
-//                    100 + (i % 50), // 100~149개 범위의 재고
-//                    "menu" + i + ".jpg" // menu1.jpg, menu2.jpg 등
-//            );
-//        }
     }
 }
